--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 	<link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" type='css/text'> 
 </head>
 <body>
+	<script src="js/jquery-2.1.4.min.js"></script>
+  	<script src="js/bootstrap.min.js"></script>
+  	<script src="js/ajax-utils.js"></script>
+  	<script src="js/script.js"></script>
 	<header>
 		<nav id="header-nav" class="navbar navbar-default">
 			<div class="container">
@@ -72,29 +76,7 @@
 	</header>
 
 	<div id="main-content" class="container">
-		<div class="jumbotron">
-			<img src="images/barsmall.jpg" alt="Pictures of Bar" class="img-responsive visible-xs"> 
-		</div>
-		
-		<div id="tiles" class="row">
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="Pages/Drinks.html">
-					<div id="Drinks-tile"><span>Drinks</span></div>
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-6 col-xs-12">
-				<a href="Pages/Menu.html">
-					<div id="Menu-tile">
-						<span>Menu</span></div>
-				</a>
-			</div>
-			<div class="col-md-4 col-sm-12 col-xs-12">
-				<a href="https://goo.gl/maps/x5whuKnRtfo" target="_blank">
-					<div id="Map-tile">
-						<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3559.9186024104656!2d75.56460250705483!3d26.84254113903228!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1538254945957" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe><span>Map</span></div>
-				</a>
-			</div>			
-		</div>
+
 	</div>
 
 	<footer class="panel-footer">
@@ -118,8 +100,5 @@
 		
 	</footer>
 
-	<script src="js/jquery-2.1.4.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
 </body>
 </html>
